crates/bevy_reflect/compile_fail/tests/reflect_derive/custom_where_fail.stderr
error: expected `:`
  --> tests/reflect_derive/custom_where_fail.rs:LL:CC
   |
LL | #[reflect(where T: core::fmt::Debug, MyTrait)]
   |                                             ^

error: aborting due to 1 previous error
